--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,11 +30,7 @@ dist.jar=${dist.dir}/Residencias.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.Downloads-jfreechart-1.0.0-rc1=..\\..\\Downloads\\jfreechart-1.0.0-rc1
-file.reference.javax.mail.jar=..\\..\\Downloads\\javax.mail.jar
-file.reference.javax.mail.jar-1=libraries\\javax.mail.jar
-file.reference.jcommon-1.0.23.jar=libraries\\jcommon-1.0.23\\jcommon-1.0.23.jar
-file.reference.jfreechart-1.0.19-demo.jar=libraries/jfreechart-1.0.19/jfreechart-1.0.19-demo.jar
+file.reference.javax.mail.jar=libraries\\javax.mail.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -42,11 +38,7 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.javax.mail.jar-1}:\
-    ${file.reference.jfreechart-1.0.19-demo.jar}:\
-    ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.Downloads-jfreechart-1.0.0-rc1}
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
