--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.javax.mail.jar=libraries\\javax.mail.jar
+file.reference.joda-time-2.9.9.jar=libraries\\joda-time-2.9.9.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -38,7 +39,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.joda-time-2.9.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
